[package]
name = "lmc"
version = "0.2.0"
authors = ["Nicolas \"montoyo\" Barbotin <nicolas@barbot.in>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/montoyo/lmc-rs"
license = "MIT OR Apache-2.0"
keywords = ["mqtt", "client", "async", "iot"]
categories = ["network-programming"]
description = "An asynchronous, 100% Rust implementation of an MQTTv3 client."
exclude = [".github/*", ".vscode/*"]

[features]
default = ["fxhash", "parking_lot"]
tls = ["rustls", "rustls-native-certs", "rustls-pemfile", "webpki"]
dangerous_tls = ["tls", "rustls/dangerous_configuration"]
fxhash = ["dep:fxhash"]
parking_lot = ["dep:parking_lot"]

[dependencies]
log = "^0.4"

[dependencies.tokio]
version = "^1.6.1"
features = ["net", "sync", "time", "macros", "rt"]

####################### Test Dependencies #######################

[dev-dependencies]
env_logger = "^0.10"
tokio-test = "^0.4"
rand = "^0.8"
console-subscriber = "^0.1"

[dev-dependencies.tokio]
version = "^1.6.1"
features = ["net", "sync", "time", "macros", "rt", "tracing"]

################### Optional TLS Dependencies ###################

[dependencies.rustls]
version = "^0.20"
optional = true

[dependencies.rustls-native-certs]
version = "^0.6"
optional = true

[dependencies.rustls-pemfile]
version = "^1.0"
optional = true

[dependencies.webpki]
version = "^0.22"
optional = true

################## Other Optional Dependencies ##################

[dependencies.fxhash]
version = "^0.2"
optional = true

[dependencies.parking_lot]
version = "^0.12"
optional = true
